--- a/sass/styles/style.scss
+++ b/sass/styles/style.scss
@@ -4,3 +4,9 @@
   // background: $primaryBtn;
   @include flexCenter(row, rgb(212, 74, 23));
 }
+
+// .contact {
+//   @extend header;
+//   background: cyan;
+//   width: 100% - 20%;
+// }
